--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remote</title>
+    <script src="./server/index.js"></script>
 </head>
 
 <body>
+    <div id="lessons" ></div>
     <script src="m5.js"></script>
 </body>
 
