fetching data from server and displaying it on the website

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div id="lessons" ></div>
+    <div id="lessons" >
+    </div>
     <script src="m5.js"></script>
 </body>
 
