finding populus,minimal population and median

--- a/index.html
+++ b/index.html
@@ -7,12 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remote</title>
     <script src="./server/index.js"></script>
+    <script src="Bar-chart.js" defer></script>
+    <style>
+    body {
+        font-family: sans-serif;
+      }
+
+    rect {
+        fill: cornflowerblue;
+      }
+
+    text {
+        fill: white;
+      }
+    </style>
 </head>
 
 <body>
-    <div id="lessons" >
-    </div>
+    <h1> LIST OF ALL THE COUNTRIES WITH POPULATION NUMBER</h1>
+    <div id="lessons" ></div>
     <script src="m5.js"></script>
+    <!-- <script>
+//     const dataPopulation = document.getElementById("json");
+//     data.innerHTML += `
+//   <div id="popu">
+//     mostPopulates: {${Populus}, percentage: 0},
+//         </div>
+// `;
+    </script> -->
 </body>
 
 </html>
